[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bloomdata_craigrashjr"
version = "0.0.2"
authors = [
  { name="craigrashjr", email="craigrashjr@icloud.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/GitCraigRash/bloomdata_craigrashjr"
"Bug Tracker" = "https://github.com/GitCraigRash/bloomdata_craigrashjr/issues"